set arrow img to display: block; to prevent shifting on lg screens

--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -30,6 +30,11 @@
     text-transform: uppercase;
     color: hsl(0, 0%, 100%);
   }
+
+  img {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .hero-img {
